# helical-tech-test

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  README.md  TASK.md  compose.yaml  flake.nix  pyproject.toml
.helix/: config.toml  languages.toml
src/: db.sqlite3
src/core/: settings.py
src/db/: models.py
src/demo/: generate_data.py  process_data.py
src/logic/: consts.py  generate_data.py  process_data.py  types.py
src/server/core/: settings.py  urls.py
src/server/db/: admin.py  apps.py  models.py
src/server/db/migrations/: 0001_initial.py  0002_embedding_value.py  0003_embedding_dist_alter_embedding_perturbation_gene.py
src/server/gql_api/: apps.py  schema.py  types.py
src/server/rest_api/: api.py  apps.py  utils.py
